# 2nd-course

computers and peripherals/: README.md
computers and peripherals/1/: README.md  main.c
computers and peripherals/2/: lab2.doc  main.c
computers and peripherals/3/: README.md
computers and peripherals/4/: README.md
computers and peripherals/5/: README.md  lab5.doc  main.cpp
computers and peripherals/6/: README.md  lab6.doc
computers and peripherals/7/: README.md
computers and peripherals/8/: README.md  lab8.doc  main.cpp
computers and peripherals/9/: README.md
discrete maths/boolean algebras/: 103  16  19  20  21  24  25  26  27  34  35  36  37  42  43  44  50  51  52  54  55  62  63  81  82
discrete maths/combinatorics/: 10  103  104  105  107  111  117  12  123  126  13  134  135  136  138  14  141  15  17  22  30  33  35  36  38  41  42  43  44  49  56  71  72  73  74  76  78  83  94
discrete maths/graphs/: 102  12  127  153  154  181  268  270  30  32  34  36  39  46  53  55  61  63  64  66  76  77  88  94
evm/1/: lab1.doc
evm/6/: main.cpp
evm/7/: Matrix.cpp  Matrix.h  MatrixBLAS.cpp  MatrixVector.cpp  main.cpp
evm/8/: main.cpp
evm/9/: lab9.doc  main.cpp
network techlogies/DHCPServer/: README.md
network techlogies/DnsServer/: README.md
network techlogies/NAT/: README.md
network techlogies/Router/: README.md
network technologies/HACluster/: README.md
oop c++/: README.md
oop c++/task-0b/: CMakeLists.txt  README.md
oop c++/task-0b/src/: CSVWriter.cpp  CSVWriter.h  CSVWriterTest.cpp  FileReader.cpp  FileReaderTest.cpp  ParserTest.cpp  Statistic.cpp  Statistic.h  StatisticTest.cpp
oop c++/task-2/: README.md
oop c++/task-3/: CMakeLists.txt  README.md
oop java/: README.md
oop java/task-1/: README.md
oop java/task-2/: README.md
oop java/task-3/: README.md
oop java/task-4/: README.md
oop java/task-5/: README.md
oop/task-0b/: input1.txt
oop/task-1/: BitArray.cpp  CMakeLists.txt
oop/task-2/: CMakeLists.txt  main.cpp
oop/task-2/controller/: controller.cpp
oop/task-2/view/: view.cpp
oop/task-3/: README_SoundProcessor.md
oop/task-4/: CMakeLists.txt  main.cpp
operation systems/: README.md
operation systems/lab8/: README.md  theory_lab8.docx
parallel programming/: README.md  instructions.md
parallel programming/1/: 1.c  2.c  mpi_slae_1.c  (+1 more)
physics (3rd semester)/: README.md
physics (4th semester)/: README.md
(+284 files in other folders)
